# Aegle

./: .gitignore  LICENSE  README.md
app/: .dockerignore  .env  Dockerfile  main.py  pyproject.toml
app/exception/: MedBotException.py
app/src/: MedicalBot.py  main.py
app/src/embeddings/: embedding.py  model.py  pinecone_client.py
app/src/prompt/: Prompt.py
app/util/: constants.py  logger.py  transformation.py
ui/: Dockerfile  main.py  package-lock.json  package.json  pyproject.toml
ui/.streamlit/: config.toml
ui/src/: App.css  App.tsx
